--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,23 @@ annotated-types==0.6.0
 anyio==4.3.0
 click==8.1.7
 fastapi==0.110.0
+greenlet==3.0.3
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
 mido==1.3.2
+msgpack==1.0.8
 numpy==1.26.4
 packaging==23.2
-pretty-midi==0.2.10
+pretty_midi==0.2.10
 pychord==1.2.2
 pydantic==2.6.3
 pydantic_core==2.16.3
 pydub==0.25.1
+pynvim==0.5.0
 python-dotenv==1.0.1
 PyYAML==6.0.1
+setuptools==69.5.1
 six==1.16.0
 sniffio==1.3.1
 starlette==0.36.3
@@ -23,3 +27,4 @@ uvicorn==0.28.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+wheel==0.43.0
