feat: 도커 빌드 시간 줄이기

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
     platform: linux/amd64
     ports:
       - "8000:8000"
-    build: .
+    build:
+      context: .
+      dockerfile: './dockerfiles/Dockerfile'
