--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,8 @@ jobs:
   CI-CD:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      
       # login to docker hub
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
